getAllocations filter
